[gd_scene load_steps=6 format=2]

[ext_resource path="res://texture/ui/frame02.png" type="Texture" id=1]
[ext_resource path="res://font/font_large.tres" type="DynamicFont" id=2]
[ext_resource path="res://script/ui/ui_menu.gd" type="Script" id=3]
[ext_resource path="res://scene/ui/ui_menu_item.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/dialog/dialog_result.gd" type="Script" id=5]

[node name="dialog_result" type="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -216.0
margin_right = 296.0
margin_bottom = 216.0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="done" type="Label" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 576.0
margin_bottom = 93.0
custom_colors/font_color = Color( 1, 0.835294, 0.254902, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Done"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_elapsed" type="Label" parent="."]
margin_left = 32.0
margin_top = 128.0
margin_right = 281.0
margin_bottom = 158.0
text = "TimeSpent"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_elapsed_value" type="Label" parent="."]
margin_left = 320.0
margin_top = 128.0
margin_right = 560.0
margin_bottom = 158.0
text = "-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_left" type="Label" parent="."]
margin_left = 32.0
margin_top = 176.0
margin_right = 280.0
margin_bottom = 206.0
text = "TimeLeft"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_left_value" type="Label" parent="."]
margin_left = 320.0
margin_top = 176.0
margin_right = 560.0
margin_bottom = 206.0
text = "-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_best" type="Label" parent="."]
margin_left = 32.0
margin_top = 224.0
margin_right = 281.0
margin_bottom = 254.0
text = "TimeBest"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_best_value" type="Label" parent="."]
margin_left = 320.0
margin_top = 224.0
margin_right = 560.0
margin_bottom = 254.0
text = "-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="apple" type="Label" parent="."]
margin_left = 32.0
margin_top = 272.0
margin_right = 281.0
margin_bottom = 302.0
text = "TookPower"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="apple_value" type="Label" parent="."]
margin_left = 320.0
margin_top = 272.0
margin_right = 560.0
margin_bottom = 302.0
text = "-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 320.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
vertical = false
parent_menu = null
hide_parent_menu = false
return_item = null

[node name="item_continue" parent="menu" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -24.0
margin_right = -48.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/dialog_result/menu/item_repeat")
focus_neighbour_right = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/dialog_result/menu/item_repeat")
focus_next = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/dialog_result/menu/item_repeat")
focus_previous = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/dialog_result/menu/item_repeat")
title = "Next"

[node name="item_repeat" parent="menu" instance=ExtResource( 4 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = -24.0
margin_right = 240.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/dialog_result/menu/item_continue")
focus_neighbour_right = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/dialog_result/menu/item_continue")
focus_next = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/dialog_result/menu/item_continue")
focus_previous = NodePath("/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6275/@@6109/@@6110/@@6111/@@6112/@@6113/dialog_result/menu/item_continue")
title = "Repeat"

[connection signal="action" from="menu/item_continue" to="." method="_on_item_continue_action"]
[connection signal="action" from="menu/item_repeat" to="." method="_on_item_repeat_action"]
